[gd_scene load_steps=9 format=3 uid="uid://duddahvmkr1vs"]

[ext_resource type="Texture2D" uid="uid://dk4phovqr2v7a" path="res://Assets/Buttons/Back.png" id="1_1och7"]
[ext_resource type="Script" uid="uid://610kk4h0i38w" path="res://Scripts/pause_menu.gd" id="1_vmyb1"]
[ext_resource type="Texture2D" uid="uid://col1nxpfbiobb" path="res://Assets/Buttons/Play.png" id="2_bpi0q"]
[ext_resource type="Texture2D" uid="uid://worxx6ujfo3s" path="res://Assets/Buttons/Restart.png" id="3_vmyb1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myy0f"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjs17"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bpi0q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vmyb1"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vmyb1")

[node name="BlackBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0.478431)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -56.0
offset_right = 169.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_myy0f")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -47.5
offset_right = 159.5
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sjs17")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_bpi0q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vmyb1")
icon = ExtResource("1_1och7")
flat = true
icon_alignment = 1
expand_icon = true

[node name="PlayButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_bpi0q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vmyb1")
icon = ExtResource("2_bpi0q")
flat = true
icon_alignment = 1
expand_icon = true

[node name="RestartButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_bpi0q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vmyb1")
icon = ExtResource("3_vmyb1")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="PanelContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
